Finally figured out the twitter layout issue. Fixed now

--- a/443 Dashboard/stylesheet.css
+++ b/443 Dashboard/stylesheet.css
@@ -49,6 +49,7 @@ float:left;
 width:10%;
 border: 2px solid black;
 height:75%;
+opacity:.100;
 }
 
 /* Steve added below this for fun */
